@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add keyboard shortcuts to dynamic compose page (Michael Wing &lt;marsfurrycreature@gmail.com&gt;).
 * [mms] Fix sidebar element wrapping.
 * [mms] Fix regression preventing contacts popup window from working (Bug #11324).
 * [mms] Fix regression in select all checkbox on traditional mailbox page (Bug #11317).
@@ -2624,6 +2625,7 @@
    <date>2012-07-20</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Add keyboard shortcuts to dynamic compose page (Michael Wing &lt;marsfurrycreature@gmail.com&gt;).
 * [mms] Fix sidebar element wrapping.
 * [mms] Fix regression preventing contacts popup window from working (Bug #11324).
 * [mms] Fix regression in select all checkbox on traditional mailbox page (Bug #11317).
